<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AddFaceActivity">

    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/face_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/selectedImage">

        <Button
            android:id="@+id/addFromPhoto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_back"
            android:onClick="choosePhoto"
            android:paddingHorizontal="8dp"
            android:text="@string/addFace_TakePicture_button" />

        <Button
            android:id="@+id/addFromCamera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_back"
            android:onClick="takePhoto"
            android:paddingHorizontal="8dp"
            android:text="@string/addFace_ChooseFromDisk_button" />
    </LinearLayout>


    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/border_back"
        android:hint="User Id"
        android:inputType="number"
        android:paddingHorizontal="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedImage" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_back"
        android:hint="@string/addFace_Username_hint"
        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/Cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_back"
            android:onClick="cancel"
            android:text="@string/addFace_Cancel_button" />

        <Button
            android:id="@+id/addUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_back"
            android:onClick="addUser"
            android:text="@string/addFace_Add_button" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectedImage"
        app:layout_constraintEnd_toEndOf="@+id/selectedImage"
        app:layout_constraintStart_toStartOf="@+id/selectedImage"
        app:layout_constraintTop_toTopOf="@+id/selectedImage" />

</androidx.constraintlayout.widget.ConstraintLayout>