<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddFaceActivity">


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="220dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/openAddUserButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back"
                android:text="@string/main_addUser_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/openDeleteUserButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back"
                android:text="@string/main_deleteUser_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/openPreviewButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="444dp"
            android:background="@drawable/btn_back"
            android:text="@string/main_openPreview_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container" />

        <!--        <Button-->
        <!--            android:id="@+id/openBenchmarkButton"-->
        <!--            android:layout_width="170dp"-->
        <!--            android:layout_height="90dp"-->
        <!--            android:layout_marginEnd="24dp"-->
        <!--            android:layout_marginBottom="24dp"-->
        <!--            android:onClick="onOpenBenchmarkClick"-->
        <!--            android:text="@string/main_openBenchmark_button"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_content" />
</androidx.drawerlayout.widget.DrawerLayout>